Fix .page-container padding on small screen

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -87,7 +87,7 @@ a.button {
   position: absolute;
   width: 100%;
   height: 100%;
-  padding: 16px;
+  padding: 0px;
   padding-bottom: 8px;
   background: linear-gradient(to bottom, #b2dfdb, #e0f2f1);
 }
